--- a/public/beschreibung/index.html
+++ b/public/beschreibung/index.html
@@ -148,7 +148,7 @@ Vogelschutznetze als Teichschutznetz
     <header class="mt4 w-100">
       <aside class="instapaper_ignoref b helvetica tracked ttu">
           
-        Hochwertige AGROFLOR Vogelschutznetze
+        Hochwertige AGROFLOR Kirschennetze
       </aside><div id="sharing" class="mt3 ananke-socials"></div>
 <h1 class="f1 athelas mt3 mb1"></h1>
       
