--- a/public/mehr/index.html
+++ b/public/mehr/index.html
@@ -107,7 +107,7 @@ Schutzfaktor 100 % umweltfreundliches, reißfestes PE-Material tierschutzgerecht
     <header class="mt4 w-100">
       <aside class="instapaper_ignoref b helvetica tracked ttu">
           
-        Hochwertige AGROFLOR Vogelschutznetze
+        Hochwertige AGROFLOR Kirschennetze
       </aside><div id="sharing" class="mt3 ananke-socials"></div>
 <h1 class="f1 athelas mt3 mb1"></h1>
       
